# generative-art

./: README.md  pyproject.toml
differential/: app.js  app2.js  main.html
lsystem/: main.py
perlin/: perlin.html  perlin_field.html  perlin_field_random.html
