[tool.poetry]
name = "generative-art"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
matplotlib = "^3.2.0"
scipy = "^1.4.1"
numpy = "^1.18.1"
ipywidgets = "^7.5.1"
black = { version = "*", allow-prereleases = true }

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
